# clis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
.githooks/: post-merge  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
crates/cdt/: Cargo.toml  README.md  ROADMAP.md
crates/cdt/src/: cache.rs  clean.rs  conflicts.rs  lib.rs  main.rs  scanner.rs  timeline.rs  tui.rs
crates/cdt/tests/: cache_test.rs  quick_actions_test.rs  scanner_test.rs  tui_test.rs
crates/cli-core/: Cargo.toml
crates/cli-core/src/: lib.rs  shell.rs
crates/learn/: Cargo.toml  ROADMAP.md
crates/learn/src/: commands.rs  config.rs  lib.rs  main.rs  schedule.rs  select.rs  types.rs
crates/learn/src/parse/: concept.rs  mod.rs  review.rs
crates/learn/src/write/: frontmatter.rs  mod.rs  review_session.rs
crates/learn/tests/: cli_smoke.rs  grade_flow.rs
crates/ranking-core/: Cargo.toml
crates/ranking-core/src/: lib.rs
crates/rippy/: Cargo.toml  ROADMAP.md
crates/rippy/docs/: search-design.md
crates/rippy/src/: clipboard.rs  config.rs  db.rs  highlight.rs  hotkey.rs  main.rs  mcp.rs  tag.rs  terminal.rs  tui.rs  watcher.rs
crates/tui-core/: Cargo.toml
crates/tui-core/src/: lib.rs
