[package]
name = "learn"
version = "0.1.0"
edition = "2021"
description = "Agent-assisted concept learning workflows for Obsidian vaults — spaced repetition CLI"
license = "MIT"
repository = "https://github.com/brianchuang/clis"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "3"
